[package]
name = "revy"
version = "0.16.0"
authors = ["rerun.io <opensource@rerun.io>"]
categories = ["gamedev", "tools", "debugger"]
description = "Proof-of-concept time-travel debugger for Bevy, built with Rerun."
edition = "2021"
homepage = "https://rerun.io"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = ["rerun", "bevy", "debugger", "time-travel", "gamedev"]
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/rerun-io/revy"
rust-version = "1.76"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[dependencies]
rerun = { version = "0.17.0", default-features = false, features = ["sdk", "image", "glam"] }
bevy = { version = "0.14" }
# bevy = { path = "../../bevyengine/bevy/" }

itertools = "0.13"
ron = "0.8"


[dev-dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
# bevy = { path = "../../bevyengine/bevy/", features = ["dynamic_linking"] }
