[package]
name = "revy"
version = "0.20.0"
authors = ["rerun.io <opensource@rerun.io>"]
categories = [
    "game-development",
    "development-tools",
    "development-tools::debugging",
]
description = "Proof-of-concept time-travel debugger for Bevy, built with Rerun."
edition = "2021"
homepage = "https://rerun.io"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = ["rerun", "bevy", "debugger", "time-travel", "gamedev"]
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/rerun-io/revy"
rust-version = "1.82"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[dependencies]
rerun = { version = "0.21.0", default-features = false, features = [
    "sdk",
    "image",
    "glam",
] }
bevy = { version = "0.15" }
# bevy = { path = "../../bevyengine/bevy/" }
# `dynamic_linking` on windows hits error for maximum number of exported symbols on linking.
# On linux, you may run into libc issues depending on your system.
# bevy = { path = "../../bevyengine/bevy/", features = ["dynamic_linking"] }

itertools = "0.13"
ron = "0.8"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
